--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
           <img
             class="img1"
             src="download__1_-removebg-preview.png"
-            alt="noopener"
+            
         /></a>
         <a href="#"
           ><img
             class="img2"
             src="download__2_-removebg-preview.png"
-            alt="noopener"
+            
         /></a>
         <a href="#"
-          ><img class="img3" src="face-removebg-preview.png" alt="noopener"
+          ><img class="img3" src="face-removebg-preview.png" 
         /></a>
       </div>
     </div>
